docmd-main/v07/en/migration/overview.md
---
title: "Migration Overview"
description: "Learn how to easily migrate your existing documentation to docmd."
---

# Migrating to docmd

`docmd` provides a fully automated **migration engine** to help you transition from legacy or competing documentation platforms with a single command. The goal of the migration engine is to eliminate the tedious work of moving your markdown files and restructuring your project directory.

## How It Works

The migration command will:

1. **Detect** your existing configuration file (e.g. `docusaurus.config.js`, `mkdocs.yml`).
2. **Extract** core metadata like your site's `title`.
3. **Backup** your existing files and directories safely into a `*-backup/` directory (e.g., `docusaurus-backup/`).
4. **Copy** your Markdown content into the standard `docmd` `docs/` directory.
5. **Generate** a fresh `docmd.config.js` tailored for your content.

You can then run `npx @docmd/core dev` immediately to see your content rendered in the `docmd` engine.

## What is Migrated

| Feature | Migrated Automatically? |
| :--- | :--- |
| **Markdown Files** | ✅ Yes, all `.md` and `.mdx` files are moved to `docs/` |
| **Directory Structure** | ✅ Yes, your folder nesting is preserved |
| **Site Title** | ✅ Yes, extracted from your config |
| **Container Syntax** | ✅ Yes, VitePress/Docusaurus containers work without changes |
| **Navigation / Sidebar** | ⚠️ **No**, requires manual mapping |
| **Localisation (i18n)** | ⚠️ **No**, requires manual mapping |
| **Versioning** | ⚠️ **No**, requires manual mapping |
| **Custom React/Vue Components** | ❌ No, these must be replaced with `docmd` Containers |

::: callout success "Container Syntax Compatibility"
As of `docmd` 0.7.8, container syntax from **VitePress** (`:::tip`, `:::warning`, `:::danger`, `:::info`, `:::details`) and **Docusaurus** (`:::note`, `:::caution`) works without modification. Your existing admonitions and collapsible sections will render correctly in `docmd`.

**MkDocs** uses `!!!` syntax which requires manual conversion to `:::` format.
:::

## Why Navigation and i18n Aren't Automatically Migrated

Every documentation platform handles navigation sidebars, translations, and multi-versioning differently. For example, Docusaurus uses complex JavaScript objects or autogenerated sidebars, while MkDocs relies on strictly indented YAML structures.

Rather than risking an incorrect, broken migration by guessing complex configurations, `docmd` moves your content safely and asks you to configure navigation, localisation, and versioning natively using `docmd`'s simple JSON-based APIs.

- **Navigation:** Learn how to create a `navigation.json` in the [Navigation Setup](../configuration/navigation.md).
- **Localisation:** See the [Localisation Guide](../configuration/localisation/index.md) for setting up multi-language docs.
- **Versioning:** Refer to the [Versioning Setup](../configuration/versioning.md).

## Supported Platforms

Select your current platform for specific migration instructions:

- [Migrating from Docusaurus](./docusaurus.md)
- [Migrating from MkDocs](./mkdocs.md)
- [Migrating from VitePress](./vitepress.md)
- [Migrating from Astro Starlight](./starlight.md)
